updated footer social media icon sizes and styles

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -712,7 +712,7 @@
         <div class="footer-logo">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330 ,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -751,10 +751,10 @@
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/x-bird-icon.webp" 
                   alt="X (Twitter) logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -764,10 +764,10 @@
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/ig-icon.webp" 
                   alt="Instagram logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -777,10 +777,10 @@
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin-icon.webp" 
                   alt="LinkedIn logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -790,10 +790,10 @@
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github-icon.avif" 
                   alt="GitHub logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
