moved canvas-skills-grid styles to inline

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -108,6 +108,21 @@
       }
     </script>
     <style>
+      picture {
+        max-width: 100vw;
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 0.25em;
+      }
       .canvas-skills-grid {
         display: flex;
         flex-direction: row;
