replaced author container

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -461,7 +461,7 @@
         <div class="website-grade fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1302,h_1092/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1364/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -477,7 +477,7 @@
               alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
               width="312"
               height="261"
-              style="object-fit: contain;"
+              style="object-fit: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -724,21 +724,21 @@
       <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_944,h_414,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_790,h_346,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_546,h_200,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-              width="273" 
-              height="100" 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="320" 
+              height="234" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
               style="object-fit: contain;"
               loading="auto" 
