--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -579,7 +579,31 @@
           <a href="https://github.com/Allison2002/tech-trends.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
         </div>
       </div>  
-<div class="author-bio-text">
+      <div class="author-bio-container fancy-border-img" id="author-bio">
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="320" 
+              height="234" 
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              style="object-fit: contain;"
+              loading="auto" 
+              decoding="async" 
+            />
+          </picture> 
+          <div class="author-bio-text">
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
             <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
             <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
