--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -609,7 +609,31 @@
             </div>
           </div> 
         </article>
-        <div class="author-bio-text">
+        <div class="author-bio-container fancy-border-img" id="author-bio">
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img 
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="320" 
+              height="234" 
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              style="object-fit: contain;"
+              loading="auto" 
+              decoding="async" 
+            />
+          </picture> 
+          <div class="author-bio-text">
             <h3>Partner with an AI Content Specialist & Web Developer</h3>
             <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
             <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
@@ -624,6 +648,7 @@
                 rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
                 >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
+        </div>
       </div>
     </main>
     <div id="side-nav" class="hidden">
@@ -644,7 +669,7 @@
         <div class="footer-logo">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330 ,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_768,h_330,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
@@ -683,10 +708,10 @@
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/x-bird-icon.webp" 
                   alt="X (Twitter) logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -696,10 +721,10 @@
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/ig-icon.webp" 
                   alt="Instagram logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -709,10 +734,10 @@
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin-icon.webp" 
                   alt="LinkedIn logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -722,10 +747,10 @@
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github-icon.avif" 
                   alt="GitHub logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width: 32;
+                  height: 32;
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
