fixed syntax error in social-media container

--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -766,8 +766,8 @@
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/x-bird-icon.webp" 
                   alt="X (Twitter) logo"
-                  width: 32;
-                  height: 32;
+                  width="32"
+                  height="32"
                   loading="auto"  
                   style="object-fit: contain;"
                   fetchpriority="auto"
@@ -779,8 +779,8 @@
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/ig-icon.webp" 
                   alt="Instagram logo"
-                  width: 32;
-                  height: 32;
+                  width="32"
+                  height="32"
                   loading="auto"  
                   style="object-fit: contain;"
                   fetchpriority="auto"
@@ -792,8 +792,8 @@
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin-icon.webp" 
                   alt="LinkedIn logo"
-                  width: 32;
-                  height: 32;
+                  width="32"
+                  height="32"
                   loading="auto"  
                   style="object-fit: contain;"
                   fetchpriority="auto"
@@ -805,8 +805,8 @@
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github-icon.avif" 
                   alt="GitHub logo"
-                  width: 32;
-                  height: 32;
+                  width="32"
+                  height="32"
                   loading="auto"  
                   style="object-fit: contain;"
                   fetchpriority="auto"
