--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -820,10 +820,10 @@
               <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/x-bird-icon.webp" 
                   alt="X (Twitter) logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -833,10 +833,10 @@
               <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/ig-icon.webp" 
                   alt="Instagram logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -846,10 +846,10 @@
               <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/linkedin-icon.webp" 
                   alt="LinkedIn logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
@@ -859,10 +859,10 @@
               <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
                 <img src="/img/github-icon.avif" 
                   alt="GitHub logo"
-                  width: 2.5rem;
-                  height: 2.5rem;
+                  width="32"
+                  height="32"
                   loading="auto"  
-                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  style="object-fit: contain;"
                   fetchpriority="auto"
                   decoding="async"
                 >
