fixed sytanx error in author-bio

--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -655,7 +655,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/my_tube.git">the code</a></li>
         <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
         <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
         <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
@@ -665,7 +665,7 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <footer id="nav">
+      <footer id="nav">
         <div class="footer-logo">
           <picture> 
             <source
@@ -761,5 +761,4 @@
       </footer>
     <script src="/assets/script.js" defer></script>
   </body>
-</html>      
-      
+</html>     
