--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -109,7 +109,6 @@
     </script>
     <style>
       picture {
-        max-width: 100vw;
         width: 100%;
         height: auto;
         display: block;
@@ -123,6 +122,7 @@
         margin: 0 auto;
         padding: 0.25em;
       }
+
       .canvas-skills-grid {
         display: flex;
         flex-direction: row;
@@ -336,6 +336,8 @@
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
+            width="48"
+            height="48"
           />
         </div>
 
@@ -668,44 +670,43 @@
         </div>
       </div>
       <div class="author-bio-container fancy-border-img" id="author-bio">
-          <picture> 
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 1200px)"
-              sizes="100vw"
-            />
-            <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-              type="image/avif"
-              media="(min-width: 481px) and (max-width: 1199px)"
-              sizes="100vw"
-            />
-            <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
-              width="320" 
-              height="234" 
-              alt="Photo of Genny Allison, the web developer and AI content specialist"
-              style="object-fit: contain;"
-              loading="auto" 
-              decoding="async" 
-            />
-          </picture> 
-          <div class="author-bio-text">
-            <h3>Partner with an AI Content Specialist & Web Developer</h3>
-            <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
-            <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-            <p>Connect with me on 
-              <a href="https://www.linkedin.com/in/genny-allison/" 
-                target="_blank" 
-                rel="noopener noreferrer" 
-                aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
-              </a>, explore my 
-              <a href="https://gennyallison.netlify.app"
-                target="_blank" 
-                rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
-          </div>
+        <picture> 
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_1664,h_730,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 1200px)"
+            sizes="100vw"
+          />
+          <source
+            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_904,h_396,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+            type="image/avif"
+            media="(min-width: 481px) and (max-width: 1199px)"
+            sizes="100vw"
+          />
+          <img 
+            src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_640,h_234,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+            width="320" 
+            height="234" 
+            alt="Photo of Genny Allison, the web developer and AI content specialist"
+            style="object-fit: contain;"
+            loading="auto" 
+            decoding="async" 
+          />
+        </picture> 
+        <div class="author-bio-text">
+          <h3>Partner with an AI Content Specialist & Web Developer</h3>
+          <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
+          <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
+          <p>Connect with me on 
+            <a href="https://www.linkedin.com/in/genny-allison/" 
+              target="_blank" 
+              rel="noopener noreferrer" 
+              aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+            </a>, explore my 
+            <a href="https://gennyallison.netlify.app"
+              target="_blank" 
+              rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
+              >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
         </div>
       </div>
     </main>
@@ -713,7 +714,7 @@
       <ul>
         <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project2/project2-intro.html#the-menu">the "menu"</a></li>
-        <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
+        <li><a href="https://github.com/Allison2002/my_tube.git">the code</a></li>
         <li><a href="/pages/project2/project2-the-grade.html">the grade</a></li>
         <li><a href="/pages/project2/project2-the-design.html">the design</a></li>
         <li><a href="/pages/project2/project2-the-casestudy.html">the casestudy</a></li>
@@ -723,7 +724,7 @@
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
-    <footer id="nav">
+      <footer id="nav">
         <div class="footer-logo">
           <picture> 
             <source
@@ -819,5 +820,4 @@
       </footer>
     <script src="/assets/script.js" defer></script>
   </body>
-</html>      
-      
+</html>     
