--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -384,6 +384,8 @@
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
+            width="32"
+            height="48"
           />
         </div>
 
