--- a/pages/project2/project2-intro.html
+++ b/pages/project2/project2-intro.html
@@ -369,6 +369,8 @@
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
+            width="32"
+            height="48"
           />
         </div>
 
