--- a/pages/project2/project2-the-casestudy.html
+++ b/pages/project2/project2-the-casestudy.html
@@ -393,6 +393,8 @@
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
+            width="32"
+            height="48"
           />
         </div>
 
