--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -363,6 +363,8 @@
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
+            width="32"
+            height="48"
           />
         </div>
 
