--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -344,7 +344,7 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,h_80,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               width="160" 
               height="80"
@@ -358,12 +358,12 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="/img/hamburger-icon.png"
+            src="https://res.cloudinary.com/dnptzisuf/image/fetch/fl_progressive,f_auto,q_auto,c_fill,w_96,h_96,dpr_auto,fl_lossy,fl_force_strip/v1747140374/https://gennyallison.netlify.app/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
-            width="32"
+            width="48"
             height="48"
           />
         </div>
