--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -149,11 +149,7 @@
       }
 
       .canvas-skills-grid img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
         object-position: center;
-        display: block;
         border-top: 1em solid #000;
         border-left: 1em solid #000;
         border-right: 0.5em solid #000;
@@ -241,7 +237,7 @@
         }
 
         .canvas-skills-grid picture {
-          min-width: 40%;
+          max-width: 40%;
         }
 
         .canvas-skills-grid img {
@@ -271,9 +267,6 @@
 
   
         .canvas-skills-grid img {
-          aspect-ratio: auto;
-          width: 100%;
-          height: auto;
           border-width: 0.5em;
           object-fit: cover;
         }
@@ -364,41 +357,41 @@
         </div>
       </nav>
       <div class="canvas-skills-grid">
-        <picture> 
-          <!-- Desktop ≥ 941px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1748537741/sports-tube-desktop_c9qmdx.avif"
-            media="(min-width: 941px)"
-            type="image/avif"
-          />
+          <picture> 
+            <!-- Desktop ≥ 941px -->
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1458,h_946/v1748537741/sports-tube-desktop_c9qmdx.avif"
+              media="(min-width: 941px)"
+              type="image/avif"
+            />
 
-          <!-- Tablet 769px–940px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1748537741/sports-tube-tablet_mkowrj.avif"
-            media="(min-width: 769px) and (max-width: 940px)"
-            type="image/avif"
-          />
+            <!-- Tablet 769px–940px -->
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_692,h_452/v1748537741/sports-tube-tablet_mkowrj.avif"
+              media="(min-width: 769px) and (max-width: 940px)"
+              type="image/avif"
+            />
 
-          <!-- Mobile 481px–768px -->
-          <source
-            srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1748537741/sports-tube-tablet_mkowrj.avif"
-            media="(min-width: 481px) and (max-width: 768px)"
-            type="image/avif"
-          />
-          
+            <!-- Mobile 481px–768px -->
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_558,h_360/v1748537741/sports-tube-tablet_mkowrj.avif"
+              media="(min-width: 481px) and (max-width: 768px)"
+              type="image/avif"
+            />
+            
 
-          <!-- Fallback ≤480px -->
-          <img
-            src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1748537741/sports-tube-mobile_j2lush.avif"
-            alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
-            width="164"
-            height="176"
-            style="object-fit: cover;"
-            fetchpriority="high"
-            loading="eager"
-            decoding="async"
-          />
-        </picture>
+            <!-- Fallback ≤480px -->
+            <img
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_328,h_352/v1748537741/sports-tube-mobile_j2lush.avif"
+              alt="Sports Tube project hero showcasing a fast-loading, responsive sports blog with AI-generated content"
+              width="164"
+              height="176"
+              style="object-fit: cover;"
+              fetchpriority="high"
+              loading="eager"
+              decoding="async"
+            />
+          </picture>
 
         <div class="canvas-skills-title">
           <h1>a canvas of code:</h1>
