--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -140,7 +140,6 @@
       .canvas-skills-grid picture {
         flex: 0 0 40%;
         max-width: 40%;
-        min-width: 40%;
         display: flex;
         align-items: stretch;
         justify-content: center;
@@ -214,9 +213,7 @@
       /* Tablets: 941px–1024px */
       @media (min-width: 769px) and (max-width: 1024px) {
         .canvas-skills-grid {
-          padding: 0.4rem;
-          min-height: 200px;
-          max-height: 300px;
+          padding: 0.4rem;2
         }
 
         .canvas-skills-grid img {
@@ -224,7 +221,7 @@
         }
 
         .canvas-skills-title {
-          min-height: 200px;
+          height: 100%;
           border-width: 0.5em;
         }
       }
