--- a/pages/project2.html
+++ b/pages/project2.html
@@ -26,38 +26,232 @@
 
 
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
-  </head>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Genny Allison | Front-End Developer & AI Content Specialist | Sports Tube Project",
-      "url": "https://sports-tube.netlify.app/",
-      "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Allison Stock Inc.",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png",
-          "width": 150,
-          "height": 150
+    <style>
+      picture {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        padding: 0.25em;
+      }
+
+      .canvas-skills-grid {
+        display: flex;
+        flex-direction: row;
+        align-items: stretch;
+        width: 100%;
+        max-width: 100vw;
+        background-color: #000;
+        overflow: hidden;
+        box-sizing: border-box;
+        padding: 0.5rem;
+        contain: layout paint style;
+      }
+      
+
+      .canvas-skills-grid picture {
+        flex: 0 0 40%;
+        max-width: 40%;
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        background-color: #000;
+        box-sizing: border-box;
+      }
+
+      .canvas-skills-grid img {
+        object-position: center;
+        border-top: 1em solid #000;
+        border-left: 1em solid #000;
+        border-right: 0.5em solid #000;
+        border-bottom: 1em solid #000;
+        will-change: transform;
+      }
+
+      img {
+        display: block;
+      }
+
+      img[fetchpriority="high"] {
+        contain: layout paint;
+        content-visibility: auto;
+      }
+
+      /* === TEXT CONTAINER === */
+      .canvas-skills-title {
+        flex: 0 0 60%;
+        max-width: 60%;
+        min-width: 60%;
+        background-color: #fff;
+        border: 1em solid #000;
+        border-left: 0.5em solid #000;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: auto;  
+        min-height: 200px;
+      }
+
+      .canvas-skills-title h1,
+      .canvas-skills-title h2 {
+        font-family: Georgia, 'Times New Roman', serif;
+        font-weight: normal;
+        font-style: normal;
+        text-align: center;
+        line-height: 1.4;
+        font-display: swap;
+        margin: 0;
+      }
+
+      .canvas-skills-title h1 {
+        font-size: clamp(1.5rem, 4vw, 6rem);
+        line-height: 1.8;
+        height: auto;
+        overflow: hidden;
+      }
+
+      .canvas-skills-title h2 {
+        font-size: clamp(1.1rem, 3vw, 3rem);
+        line-height: 1.5;
+        height: auto;
+        overflow: hidden;
+      }
+
+
+      /* === MEDIA QUERIES === */
+
+      /* Tablets: 941px–1024px */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .canvas-skills-grid {
+          padding: 0.4rem;2
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          height: 100%;
+          border-width: 0.5em;
+        }
+      }
+
+
+      /* Mobile landscape & phablets: 481px–768px */
+      @media (min-width: 481px) and (max-width: 768px) {
+        .canvas-skills-grid {
+          padding: 0.3rem;
+        }
+
+        .canvas-skills-grid picture {
+          max-width: 40%;
+        }
+
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title {
+          min-height: 180px;
+          padding: 0.5rem;
+          border-width: 0.5em;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 2.2rem;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.5rem;
+        }
+      }
+
+      /* Smallest mobile screens ≤ 480px */
+      @media (max-width: 480px) {
+        .canvas-skills-grid {
+          padding: 0.25rem;
+        }
+
+  
+        .canvas-skills-grid img {
+          border-width: 0.5em;
+          object-fit: cover;
+        }
+
+        .canvas-skills-title {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          min-height: 200px;
+          border-width: 0.5em;
+          width: 50%;
+          max-width: 50vw;
+          padding-right: 0.7em;
+        }
+
+        .canvas-skills-title h1 {
+          font-size: 1.4rem;
+          height: 3rem;
+          width: 100%;
+          line-height: 1.5;
+          margin: 0 auto;
+          padding: 0;
+        }
+
+        .canvas-skills-title h2 {
+          font-size: 1.3rem;
+          height: 3rem;
+          width: 100%;
+          line-height: 1;
+          margin: 0 auto;
+          padding: 0;
+        }
+      }
+
+    </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Genny Allison | Front-End Developer & AI Content Specialist | Sports Tube Project",
+        "url": "https://sports-tube.netlify.app/",
+        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Allison Stock Inc.",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png",
+            "width": 150,
+            "height": 150
+          },
+          "sameAs": "https://www.linkedin.com/in/genny-allison/"
         },
-        "sameAs": "https://www.linkedin.com/in/genny-allison/"
-      },
-      "author": {
-        "@type": "Person",
-        "name": "Genny Allison",
-        "url": "https://gennyallison.netlify.app",
-        "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png",
-        "sameAs": "https://www.linkedin.com/in/genny-allison/"
-      },
-      "mainEntityOfPage": "https://sports-tube.netlify.app/",
-      "keywords": "front-end developer, AI content creation, web development, SEO optimization, project showcase, sports video platform, responsive design, UI/UX, Google PageSpeed, performance optimization",
-      "datePublished": "2025-03-31",
-      "dateModified": "2025-03-31"
-    }
-  </script>
+        "author": {
+          "@type": "Person",
+          "name": "Genny Allison",
+          "url": "https://gennyallison.netlify.app",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,w_1500/v1742999496/genny_allison_portfolio_jgvlzh.png",
+          "sameAs": "https://www.linkedin.com/in/genny-allison/"
+        },
+        "mainEntityOfPage": "https://sports-tube.netlify.app/",
+        "keywords": "front-end developer, AI content creation, web development, SEO optimization, project showcase, sports video platform, responsive design, UI/UX, Google PageSpeed, performance optimization",
+        "datePublished": "2025-03-31",
+        "dateModified": "2025-03-31"
+      }
+    </script>
+  </head>
+  
   <body>
     <section>
       <div id="nav"></div>
@@ -322,7 +516,7 @@
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Log In Page</h3></div>
-                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p  ></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
