removed redundant class

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -474,7 +474,7 @@
             />
           </picture>
         </div>
-        <div class="resume-summary" id="section3"> 
+        <div class="resume-summary"> 
           <p>
             These results highlight the powerful synergy between AI-driven solutions and a developer’s vision, demonstrating how technology can enhance accessibility, functionality, and performance. They reflect my dedication to building websites that are not only fast and accessible but also strategically designed to meet user needs and boost engagement.
           </p>
