--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -450,6 +450,19 @@
           <p>
             I view this milestone as just the beginning. With every project, I continue to refine my skills in SEO, AI content, and web development, ensuring that each website is not only optimized for performance but also tailored to meet user needs and maximize engagement.
           </p>
+        <div class="project-links">
+            <div class="takeme-text">
+              <h3>take me to the</h3>
+            </div>
+            <div class="button-grid">
+              <div class="click-me">
+                <a href="https://sports-tube.netlify.app/" target="_blank" rel="noopener noreferrer">the final look</a>
+              </div>
+              <div class="click-me">  
+                <a href="https://github.com/Allison2002/my_tube.git" target="_blank" rel="noopener noreferrer">&lt; inspect the code &gt;</a>
+              </div>
+            </div> 
+          </div>
         </div>
         <div class="resume-date fancy-border project-title">
           <h2>the grade: desktop</h2>
@@ -573,7 +586,7 @@
         <div class="resume-date fancy-border project-sub-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed3">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1580/v1741126230/starting-mobile_p7pic3.avif"
@@ -602,7 +615,7 @@
         <div class="resume-date fancy-border project-sub-title">
           <h2>where we finished</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed4">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1706/v1741120438/chrome-capture-2025-2-28_1_cmzkm3.avif"
