corrected nav logo

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -353,10 +353,10 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,h_80,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_125,h_64/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="160" 
-              height="80"
+              width="125" 
+              height="64"
               loading="eager"
               fetchpriority="high"
               decoding="async"
@@ -536,7 +536,7 @@
         <div class="resume-date fancy-border project-sub-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed1">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1500,h_1542/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
@@ -566,7 +566,7 @@
           <h3>where we finished</h3>
         </div>
 
-        <div class="pagespeed-container fancy-border-img" id="pagespeed2">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1500,h_1524/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
@@ -625,7 +625,7 @@
         <div class="resume-date fancy-border project-sub-title">
           <h2>where we started</h2>
         </div>
-        <div class="pagespeed-container fancy-border-img" id="pagespeed3">
+        <div class="pagespeed-container fancy-border-img" id="pagespeed">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_1628,h_1676/v1742916681/tech-trends-start-mobile_beu2ct.avif"
