--- a/pages/project2/project2-the-design.html
+++ b/pages/project2/project2-the-design.html
@@ -332,10 +332,10 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,h_80,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_125,h_64/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="160" 
-              height="80"
+              width="125" 
+              height="64"
               loading="eager"
               fetchpriority="high"
               decoding="async"
