--- a/pages/project2/project2-the-grade.html
+++ b/pages/project2/project2-the-grade.html
@@ -422,7 +422,7 @@
               alt="AI-powered SEO grade result from Tech Trends Blog showing Core Web Vitals optimization"
               width="312"
               height="261"
-              style="object-fit: cover;"
+              style="object-fits: cover;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
