added line-height, adjusted main min-height

--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -332,7 +332,7 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_125,h_64/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_250,h_128/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
               width="125" 
               height="64"
@@ -340,6 +340,7 @@
               fetchpriority="high"
               decoding="async"
             />
+          </a>
         </div>
 
         <div class="menu-toggle" id="menu-toggle" role="button"   
@@ -530,12 +531,11 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
-              object-fit="cover"
               width="284"
               height="963"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: contain;"
               decoding="async" 
             />
           </picture>
@@ -557,12 +557,11 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
               alt="Wireframe of the homepage layout for Tech Trends Blog"
-              object-fit="cover"
               width="284"
               height="963"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: contain;"
               decoding="sync"   
             />
           </picture>
@@ -584,12 +583,11 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_568,h_1926/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
               alt="Wireframe of the article page layout for Tech Trends Blog"
-              object-fit="cover"
               width="284"
               height="963"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: contain;"
               decoding="async" 
             />
           </picture>
