--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -332,13 +332,14 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_250,h_128/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_304,h_125/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="125" 
-              height="64"
+              width="152" 
+              height="75"
               loading="eager"
               fetchpriority="high"
               decoding="async"
+              style="object-fit: contain; aspect-ratio: ;"
             />
           </a>
         </div>
