updated nav logo size, on casestudy and the grade, test

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -363,14 +363,12 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_284,h_144/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_336,h_138/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="142" 
-              height="72"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio:aspect-ratio: 142 / 72;"
+              style="object-fit: contain; aspect-ratio: 168 / 69.078"
             />
           </a>
         </div>
