--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
         <div class="nav-logo">
           <a href="/index.html">
             <img
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,dpr_auto,fl_lossy,fl_force_strip,w_284,h_144/v1746551086/allisonstock-white-nav-logo_tklcra.png"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_160,dpr_auto,fl_lossy,fl_force_strip/v1746551086/allisonstock-white-nav-logo_tklcra.png"
               alt="Logo for Allison Stock Inc"
-              width="142" 
-              height="72"
+              width="160"
+              height="86"
               loading="eager"
               fetchpriority="high"
               decoding="async"
-              style="object-fit: contain; aspect-ratio:aspect-ratio: 142 / 72;"
             />
           </a>
         </div>
@@ -51,15 +50,11 @@
         <div class="menu-toggle" id="menu-toggle" role="button"   
           tabindex="0"  aria-label="Open Menu">
           <img
-            src="https://res.cloudinary.com/dnptzisuf/image/fetch/fl_progressive,f_auto,q_auto,c_fill,w_96,h_96,dpr_auto,fl_lossy,fl_force_strip/v1747140374/https://gennyallison.netlify.app/img/hamburger-icon.png"
+            src="/img/hamburger-icon.png"
             alt="Hamburger Icon Menu"
             class="hamburger-icon"
             loading="eager"
             fetchpriority="high"
-            width="48"
-            height="48"
-            style="object-fit: contain; aspect-ratio: 48 / 48;"
-
           />
         </div>
 
